      in-core changeset.
    * Conary no longer exits with an unhandled KeyError exception if
      an unknown dependency type is encountered in the local
      database. (CNY-3232)
    * Decompression with xz is preferred over unlzma, as CNY-3194
      intended. (CNY-3231)
    * rpm2cpio now correctly handles rpm packages compressed with xz.
      (CNY-3234)

  o New Features
    * The xz compression file format is now supported for decompressing
      sources. (CNY-3207)
    * The changemail.py repository commit action module now takes an
      optional --maxsize argument and truncates changemail messages
      to fit. (CNY-3205)
    * The Run build action now does path-based build requirement
      discovery like most build actions. (CNY-3222)
    * Allow identical files to be shared during installs and updates. Both
      troves own the shared files, and they must be updated at the same time
      when the shared files change.
    * Conary now allows packages to be installed using foreign package managers
      via wrapped content called capsules. RPM capsule support is included
      in this release.
    * Added ignoreDependencies configuration option which allows the user
      to specify certain dependency classes which should be ignored during
      installs. The defaults is "abi rpmlib".

  o Internal Changes:
    * Repository internal getfile function now avoids and database access
      when no files have been requested
    * Use bulk operatings for loading troveinfo data, speeding up repository
      commits.
    * Committing changesets now iterates over troves the changeset is
      relative to rather than getting them one at a time, significantly
      reducing the number of sql calls.
    * Conary now uses a single call when validating that file objects exist
      in the repository during a commit.
    * Repository commits now handle file paths and file streams separately
      to reduce the size of the temporary tables and the commit path.